--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@astrojs/vercel": "^8.1.3",
     "@iconify-json/ri": "^1.2.5",
     "@rive-app/canvas": "^2.26.5",
+    "@tailwindcss/vite": "^4.1.4",
     "astro": "^5.5.4",
     "astro-icon": "^1.1.5",
     "astro-robots-txt": "^1.0.0",
@@ -32,15 +33,12 @@
     "motion": "^12.5.0",
     "reading-time": "^1.5.0",
     "solid-js": "^1.9.5",
-    "svelte": "^5.25.3"
+    "svelte": "^5.25.3",
+    "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
     "@typescript-eslint/parser": "^8.28.0",
-    "@unocss/astro": "^66.0.0",
-    "@unocss/postcss": "^66.0.0",
-    "@unocss/preset-uno": "^66.0.0",
-    "@unocss/reset": "^66.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.23.0",
     "eslint-plugin-astro": "^1.3.1",
@@ -48,7 +46,6 @@
     "markdown-it": "^14.1.0",
     "motion": "^12.5.0",
     "sanitize-html": "^2.15.0",
-    "typescript": "^5.8.2",
-    "unocss": "^66.0.0"
+    "typescript": "^5.8.2"
   }
 }
