--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
+    "@iconify-json/material-icon-theme": "^1.2.5",
     "@types/d3": "^7.4.3",
     "@typescript-eslint/parser": "^8.28.0",
     "autoprefixer": "^10.4.21",
