--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "astro-robots-txt": "^1.0.0",
     "d3": "^7.9.0",
     "gsap": "^3.12.7",
+    "katex": "^0.16.22",
     "lenis": "^1.2.3",
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "solid-js": "^1.9.5",
     "svelte": "^5.25.3",
     "tailwindcss": "^4.1.4"
